force-app/main/default/objects/OrganizationPerformance__c/fields/AccumulatedAnnualPerformance__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedAnnualPerformance__c</fullName>
    <label>ACCUMULATED ANNUAL PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>