force-app/main/default/objects/OrganizationPerformance__c/fields/AccumulatedPerformanceFromIndividual__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedPerformanceFromIndividual__c</fullName>
    <label>ACCUMULATED PERFORMANCE FROM INDIVIDUAL</label>
    <summarizedField>IndividualPerformance__c.AccumulatedAnnualPerformance__c</summarizedField>
    <summaryForeignKey>IndividualPerformance__c.OrganizationPerformanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>