force-app/main/default/objects/OrganizationPerformance__c/fields/AnnualCrchievement__c.field-meta.xml
<CustomField>
    <fullName>AnnualCrchievement__c</fullName>
    <formula>AccumulatedPerformanceFromIndividual__c/  AnnualTarget__c</formula>
    <label>ANNUAL ACHIEVEMENT(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>