force-app/main/default/objects/OrganizationPerformance__c/fields/MonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>MonthlyTarget__c</fullName>
    <formula>OranizationalTargetID__r.MonthlyTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>