force-app/main/default/objects/OrganizationPerformance__c/fields/OranizationalTargetID__c.field-meta.xml
<CustomField>
    <fullName>OranizationalTargetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ORGANIZATION TARGET ID</label>
    <referenceTo>OrganizationTarget__c</referenceTo>
    <relationshipLabel>ORGANIZATION PERFORMANCE</relationshipLabel>
    <relationshipName>OrganizationPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>