force-app/main/default/objects/OrganizationPerformance__c/fields/OrganizationPerformanceName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationPerformanceName__c</fullName>
    <label>ORGANIZATION PERFORMANCE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>