force-app/main/default/objects/OrganizationPerformance__c/fields/ParentOrganizationalPerformanceID__c.field-meta.xml
<CustomField>
    <fullName>ParentOrganizationalPerformanceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT ORGANIZATIONAL PERFORMANCE ID</label>
    <referenceTo>OrganizationPerformance__c</referenceTo>
    <relationshipLabel>ORGANIZATION PERFORMANCE</relationshipLabel>
    <relationshipName>ParentOrganizationalPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>