force-app/main/default/objects/OrganizationPerformance__c/fields/PerformanceMeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>PerformanceMeasurementUnit__c</fullName>
    <label>PERFORMANCE MEASUREMENT UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PerformanceMeasurementUnit</valueSetName>
    </valueSet>
</CustomField>