force-app/main/default/objects/OrganizationPerformance__c/fields/SumPerformanceFromChildOrg__c.field-meta.xml
<CustomField>
    <fullName>SumPerformanceFromChildOrg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SumPerformanceFromChildOrg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>