force-app/main/default/objects/OrganizationPerformance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrganizationPerformanceName__c</columns>
    <columns>OranizationalTargetID__c</columns>
    <columns>ParentOrganizationalPerformanceID__c</columns>
    <columns>Active__c</columns>
    <columns>AnnualTarget__c</columns>
    <columns>KPIID__c</columns>
    <columns>KPIName__c</columns>
    <columns>AccumulatedAnnualPerformance__c</columns>
    <columns>AnnualCrchievement__c</columns>
    <columns>AccumulatedPerformanceFromIndividual__c</columns>
    <columns>HierarchyLevel__c</columns>
    <columns>PerformanceMeasurementUnit__c</columns>
    <columns>AnnualPerformanceStartDate__c</columns>
    <columns>AnnualPerformanceEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>